feat: Integrate Ollama for embeddings, update Qdrant client API, and enhance code parsing with tree-sitter queries.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ LLM_API_URL=https://x666.me
 LLM_API_KEY=your_api_key_here
 LLM_MODEL=gemini-2.5-pro
 
+# Embedding Configuration (Ollama)
+EMBEDDING_API_URL=http://localhost:11434
+EMBEDDING_MODEL=nomic-embed-text:latest
+EMBEDDING_DIMENSION=768
+
 # Qdrant Configuration
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
