feat: Add Langfuse integration for LLM observability and tracing.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ QDRANT_COLLECTION=code_blocks
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 
+# Langfuse Configuration
+LANGFUSE_PUBLIC_KEY=pk-lf-xxxxx
+LANGFUSE_SECRET_KEY=sk-lf-xxxxx
+LANGFUSE_HOST=https://cloud.langfuse.com
+
 # App Configuration
 DEBUG=false
 TEMP_DIR=/tmp/code-analyze
