feat: Implement functional verification by generating and executing tests in Docker containers and integrating results into analysis reports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - TEMP_DIR=/tmp/code-analyze
     volumes:
       - temp_data:/tmp/code-analyze
+      - /var/run/docker.sock:/var/run/docker.sock # For Docker-in-Docker execution
     depends_on:
       - redis
       - qdrant
