--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-# LLM Configuration
-LLM_API_URL=https://x666.me
-LLM_API_KEY=your_api_key_here
-LLM_MODEL=gemini-2.5-pro
+# LLM Configuration (OpenAI 官方)
+LLM_API_URL=https://api.openai.com/v1
+LLM_API_KEY=sk-your-openai-key-here
+LLM_MODEL=gpt-4o
 
-# Embedding Configuration (Ollama)
-EMBEDDING_API_URL=http://localhost:11434
-EMBEDDING_MODEL=nomic-embed-text:latest
-EMBEDDING_DIMENSION=768
+# Embedding Configuration (OpenAI 官方)
+EMBEDDING_API_URL=https://api.openai.com/v1
+EMBEDDING_API_KEY=sk-your-openai-key-here
+EMBEDDING_MODEL=text-embedding-3-small
+EMBEDDING_DIMENSION=1536
 
 # Qdrant Configuration
 QDRANT_HOST=localhost
@@ -16,7 +17,7 @@ QDRANT_COLLECTION=code_blocks
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 
-# Langfuse Configuration
+# Langfuse Configuration (optional)
 LANGFUSE_PUBLIC_KEY=pk-lf-xxxxx
 LANGFUSE_SECRET_KEY=sk-lf-xxxxx
 LANGFUSE_HOST=https://cloud.langfuse.com
