--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # LLM Configuration (OpenAI 官方)
-LLM_API_URL=https://api.openai.com/v1
+LLM_API_URL=https://api.openai.com
 LLM_API_KEY=sk-your-openai-key-here
-LLM_MODEL=gpt-4o
+LLM_MODEL=gpt-4o-mini  # 推荐: gpt-4o, gpt-4o-mini, gpt-4-turbo
 
 # Embedding Configuration (OpenAI 官方)
-EMBEDDING_API_URL=https://api.openai.com/v1
+EMBEDDING_API_URL=https://api.openai.com
 EMBEDDING_API_KEY=sk-your-openai-key-here
 EMBEDDING_MODEL=text-embedding-3-small
 EMBEDDING_DIMENSION=1536
