--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tree-sitter-javascript>=0.21.0",
     "python-dotenv>=1.0.0",
     "langfuse>=3.11.2",
+    "openai>=2.14.0",
 ]
 
 [project.optional-dependencies]
