--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,33 @@
-# LLM Configuration (OpenAI 官方)
-LLM_API_URL=https://api.openai.com
-LLM_API_KEY=sk-your-openai-key-here
-LLM_MODEL=gpt-4o-mini  # 推荐: gpt-4o, gpt-4o-mini, gpt-4-turbo
+# ============================================
+# Code Analyze - AI Code Review Agent
+# ============================================
+# Copy this file to .env and fill in your values
 
-# Embedding Configuration (OpenAI 官方)
-EMBEDDING_API_URL=https://api.openai.com
-EMBEDDING_API_KEY=sk-your-openai-key-here
+# LLM Configuration (Required)
+# -------------------------------------------
+# OpenAI API Key (get from https://platform.openai.com/api-keys)
+LLM_API_KEY=sk-your-openai-key-here
+
+# Model to use (recommended: gpt-4o-mini for cost efficiency, gpt-4o for best quality)
+LLM_MODEL=gpt-4o-mini
+
+# Embedding Configuration (Optional - defaults to LLM_API_KEY)
+# -------------------------------------------
+# Uses LLM_API_KEY by default, set separately if using different keys
+# EMBEDDING_API_KEY=sk-your-embedding-key-here
 EMBEDDING_MODEL=text-embedding-3-small
 EMBEDDING_DIMENSION=1536
 
-# Qdrant Configuration
-QDRANT_HOST=localhost
+# Langfuse Observability (Optional)
+# -------------------------------------------
+# Get keys from https://cloud.langfuse.com
+# LANGFUSE_PUBLIC_KEY=pk-lf-xxxxx
+# LANGFUSE_SECRET_KEY=sk-lf-xxxxx
+# LANGFUSE_HOST=https://cloud.langfuse.com
+
+# Docker Settings (Internal - usually no need to change)
+# -------------------------------------------
+QDRANT_HOST=qdrant
 QDRANT_PORT=6333
-QDRANT_COLLECTION=code_blocks
-
-# Redis Configuration
-REDIS_URL=redis://localhost:6379/0
-
-# Langfuse Configuration (optional)
-LANGFUSE_PUBLIC_KEY=pk-lf-xxxxx
-LANGFUSE_SECRET_KEY=sk-lf-xxxxx
-LANGFUSE_HOST=https://cloud.langfuse.com
-
-# App Configuration
-DEBUG=false
+REDIS_URL=redis://redis:6379/0
 TEMP_DIR=/tmp/code-analyze
