--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ qdrant-client>=1.7.0
 tree-sitter>=0.21.0
 tree-sitter-typescript>=0.21.0
 tree-sitter-javascript>=0.21.0
+tree-sitter-python>=0.21.0
 python-dotenv>=1.0.0
+openai>=1.0.0
+langfuse>=2.0.0
