--- a/.env.example
+++ b/.env.example
@@ -5,18 +5,29 @@
 
 # LLM Configuration (Required)
 # -------------------------------------------
-# OpenAI API Key (get from https://platform.openai.com/api-keys)
-LLM_API_KEY=sk-your-openai-key-here
-
-# Model to use (recommended: gpt-4o-mini for cost efficiency, gpt-4o for best quality)
+# Supports OpenAI-compatible APIs (OpenAI, x666.me, etc.)
+LLM_API_URL=https://api.openai.com
+LLM_API_KEY=sk-your-api-key-here
 LLM_MODEL=gpt-4o-mini
 
-# Embedding Configuration (Optional - defaults to LLM_API_KEY)
+# Example for x666.me:
+# LLM_API_URL=https://x666.me
+# LLM_API_KEY=your-api-key
+# LLM_MODEL=gemini-2.5-pro
+
+# Embedding Configuration (Required)
 # -------------------------------------------
-# Uses LLM_API_KEY by default, set separately if using different keys
-# EMBEDDING_API_KEY=sk-your-embedding-key-here
+# Supports OpenAI-compatible APIs (OpenAI, SiliconFlow, etc.)
+EMBEDDING_API_URL=https://api.openai.com
+EMBEDDING_API_KEY=sk-your-api-key-here
 EMBEDDING_MODEL=text-embedding-3-small
 EMBEDDING_DIMENSION=1536
+
+# Example for SiliconFlow:
+# EMBEDDING_API_URL=https://api.siliconflow.cn
+# EMBEDDING_API_KEY=your-siliconflow-token
+# EMBEDDING_MODEL=BAAI/bge-large-zh-v1.5
+# EMBEDDING_DIMENSION=1024
 
 # Langfuse Observability (Optional)
 # -------------------------------------------
