--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,12 @@ services:
     ports:
       - "8000:8000"
     environment:
-      # LLM Configuration (OpenAI)
+      # LLM Configuration (OpenAI-compatible API)
+      - LLM_API_URL=${LLM_API_URL:-https://api.openai.com}
       - LLM_API_KEY=${LLM_API_KEY}
       - LLM_MODEL=${LLM_MODEL:-gpt-4o-mini}
-      # Embedding Configuration (OpenAI)
+      # Embedding Configuration (OpenAI-compatible API)
+      - EMBEDDING_API_URL=${EMBEDDING_API_URL:-https://api.openai.com}
       - EMBEDDING_API_KEY=${EMBEDDING_API_KEY:-${LLM_API_KEY}}
       - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-small}
       - EMBEDDING_DIMENSION=${EMBEDDING_DIMENSION:-1536}
