--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,14 @@
 
 # ------------------------------------------------------------
 # LLM Configuration (Large Language Model)
-# 支持 OpenAI 兼容接口：OpenAI, OpenRouter, Azure, 本地部署等
 # ------------------------------------------------------------
 LLM_API_URL=https://openrouter.ai/api
 LLM_API_KEY=sk-or-your-api-key-here
-LLM_MODEL=openai/gpt-4o-mini
+LLM_MODEL=openai/gpt-5-codex
 
 # ------------------------------------------------------------
 # Embedding Configuration (向量嵌入模型)
-# 用于代码语义检索，支持 OpenAI、SiliconFlow 等
+# 用于代码语义检索
 # EMBEDDING_DIMENSION 必须与模型输出维度一致
 # ------------------------------------------------------------
 EMBEDDING_API_URL=https://api.siliconflow.cn
